# DocIngest

./: .env.example  .gitignore  CLAUDE.md  DESIGN.md  LICENSE  NOTICE  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml
.github/ISSUES/: ruff-lint-errors.md
.github/workflows/: ci.yml  docs.yml  release.yml
.planning/: HANDOFF.json  MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  config.json
.planning/milestones/: v1-MILESTONE-AUDIT.md  v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md  v1.0.1-MILESTONE-AUDIT.md  v1.0.1-REQUIREMENTS.md  (+1 more)
docker/: api.Dockerfile  chunker.Dockerfile  converter.Dockerfile  frontend.Dockerfile  graph-worker.Dockerfile  nginx.conf  watcher.Dockerfile
docs/: DocIngest Expansion Plan - Legislative Support.md  LegiscanRequirements.md  LegislativeSupportInfo.md  benchmarks.md
docs-site/: api-reference.md  benchmarks.md  configuration.md  deployment.md  getting-started.md  graph-rag.md  index.md  integrations.md  organizations.md  telemetry.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.node.json  vite.config.ts
scripts/: benchmark.py  create_api_key.py  export_openapi.py
tests/: test_api_key_scopes.py  test_auth_signup.py  test_cli.py  test_client.py  test_community_detection.py  test_documents_graph_cleanup.py  test_documents_graph_response.py  test_entity_extraction.py  test_graph_api.py  test_graph_models.py  test_graph_store.py  test_mcp_server.py  test_org_routes.py  test_organizations.py  test_plans.py  test_quota.py  test_reranker.py  test_stripe_billing.py  test_telemetry.py  test_usage.py
(+202 files in other folders)
