[project]
name = "docingest"
version = "0.1.0"
description = "Multi-tenant document ingestion engine for RAG and semantic search"
requires-python = ">=3.12"
license = "Apache-2.0"
license-files = ["LICENSE"]
dependencies = [
    # API
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.34,<1",
    "python-multipart>=0.0.18,<1",

    # Document conversion
    "docling>=2.14,<3",

    # Databases
    "motor>=3.7,<4",
    "qdrant-client>=1.13,<2",
    "redis>=5.2,<6",

    # Job queue
    "arq>=0.26,<1",

    # Blob storage (S3-compatible)
    "minio>=7.2,<8",

    # Local embeddings
    "fastembed>=0.4,<1",

    # NLP
    "spacy>=3.7,<4",

    # Community detection
    "python-igraph>=0.11,<2",
    "leidenalg>=0.10,<1",
    "scikit-learn>=1.5,<2",

    # Utilities
    "pydantic>=2.10,<3",
    "pydantic-settings>=2.7,<3",
    "httpx>=0.28,<1",
    "structlog>=24.4,<25",

    # Authentication
    "pyjwt>=2.9,<3",
    "bcrypt>=4.2,<5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9",
    "pytest-asyncio>=0.25,<1",
    "ruff>=0.9,<1",
]
mcp = [
    "mcp>=1.2",
]

[project.scripts]
docingest = "docingest.cli:main"
docingest-mcp = "docingest.mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/docingest"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
